More WIP... Added Audible Sound Options screen

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ build/msvc_2010/ASL110_Display_demo/Release/ASL4321_GUI_demo.pdb
 build/msvc_2010/ASL110_Display_demo/ASL110_Display_demo/Debug/
 build/msvc_2010/ASL110_Display_demo/Debug/
 build/msvc_2010/ASL110_Display_demo/ipch/
+build/msvc_2010/ASL110_Display_demo/*.opensdf
+
